crates/lex/tests/ui/missing_fields_enum_variant.stderr
error: no unnamed field found in enum variant which may implement `Span`
 --> tests/ui/missing_fields_enum_variant.rs
  |
  |     A(),
  |      ^^
