crates/lex/tests/ui/missing_fields_enum_variant.rs
#[derive(pluine_lex_macros::Spanned)]
enum Foo<'src> {
    A(),
    B(&'src str),
}

fn main() {}
